--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
@@ -91,7 +91,11 @@
                 <th scope="col" class="vertical-align-middle" [ngClass]="(util.userMntInconsistencia.email == 'Generales') ? 'gralBackups': 'noGralBackups'">
                   <div class="row inline-grid">
                     Date_creation
-                    <input type="date" class="form-control mr-sm-2 form-control-sm input-header" [disabled]="todo" [(ngModel)]="backupService.userBackups[backupService.indexUser].filtrosSearch.date_creation.value" name="date_creation" (ngModelChange)="backupService.actionFilterEvent($event, 'date_creation', false)">
+
+                    <input type="text" [owlDateTimeTrigger]="dateC" [owlDateTime]="dateC" class="form-control mr-sm-2 form-control-sm input-header" [disabled]="todo" [(ngModel)]="backupService.userBackups[backupService.indexUser].filtrosSearch.date_creation.value" name="date_creation" (ngModelChange)="backupService.actionFilterEvent($event, 'date_creation', false)">
+                    <owl-date-time #dateC [pickerType]="'calendar'"></owl-date-time>
+
+                    <!--input type="date" class="form-control mr-sm-2 form-control-sm input-header" [disabled]="todo" [(ngModel)]="backupService.userBackups[backupService.indexUser].filtrosSearch.date_creation.value" name="date_creation" (ngModelChange)="backupService.actionFilterEvent($event, 'date_creation', false)"-->
                     <button type="button" [ngClass]="(backupService.userBackups[backupService.indexUser].filtrosSearch.date_creation.isFilter) ? 'close': 'btnFilter-disabled'" (click)="backupService.resetValuefiltroSearch('date_creation')">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -100,7 +104,11 @@
                 <th scope="col" class="vertical-align-middle" [ngClass]="(util.userMntInconsistencia.email == 'Generales') ? 'gralBackups': 'noGralBackups'">
                   <div class="row inline-grid">
                     Date_download
-                    <input type="date" class="form-control mr-sm-2 form-control-sm input-header" [disabled]="todo" [(ngModel)]="backupService.userBackups[backupService.indexUser].filtrosSearch.date_download.value" name="date_download" (ngModelChange)="backupService.actionFilterEvent($event, 'date_download', false)">
+
+                    <input type="text" [owlDateTimeTrigger]="dateD" [owlDateTime]="dateD" class="form-control mr-sm-2 form-control-sm input-header" [disabled]="todo" [(ngModel)]="backupService.userBackups[backupService.indexUser].filtrosSearch.date_download.value" name="date_download" (ngModelChange)="backupService.actionFilterEvent($event, 'date_download', false)">
+                    <owl-date-time #dateD [pickerType]="'calendar'"></owl-date-time>
+                    
+                    <!--input type="date" class="form-control mr-sm-2 form-control-sm input-header" [disabled]="todo" [(ngModel)]="backupService.userBackups[backupService.indexUser].filtrosSearch.date_download.value" name="date_download" (ngModelChange)="backupService.actionFilterEvent($event, 'date_download', false)"-->
                     <button type="button" [ngClass]="(backupService.userBackups[backupService.indexUser].filtrosSearch.date_download.isFilter) ? 'close': 'btnFilter-disabled'" (click)="backupService.resetValuefiltroSearch('date_download')">
                       <span aria-hidden="true">&times;</span>
                     </button>
