--- a/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
@@ -34,7 +34,7 @@
       <div id="dataUserExport">
         <div class="container mb-5 mt-5">
           <!--div class="row mb-3" >
-            <h4 class="font-weight-light text-center" style="width: 100%;"><strong>Usuario: </strong>{{userService.User.email}}</h4>
+            <h4 class="font-weight-light text-center" style="width: 100%;"><strong>usuario: </strong>{{userService.users.email}}</h4>
           </div-->
           <div class="row" >
             <div class="col text-left">
