--- a/src/app/Paginas/Body/usuarios/permisos/permisos.component.html
+++ b/src/app/Paginas/Body/usuarios/permisos/permisos.component.html
@@ -1,5 +1,55 @@
-<app-titulo-encabezado titulo="Permisos"></app-titulo-encabezado>
-<button class="btn btn-outline-success rounded-circle addButton">
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
+</ngx-spinner>
+<app-titulo-encabezado [titulo]="'Permisos'"></app-titulo-encabezado>
+<div class="overflow-x-scroll">
+  <table class="table table-hover table-fixed-xl">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col" class="Encabezado-Tabla">#</th>
+        <th scope="col" class="Encabezado-Tabla">Permiso</th>
+        <th scope="col" class="Encabezado-Tabla">Descripción</th>
+        <th scope="col" class="Encabezado-Tabla">Usuarios</th>
+        <th scope="col" class="Encabezado-Tabla">Operacion</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="permisoService.Permisos.length == 0">
+      <tr style="margin-top: 200px">
+        <td colspan="5" style="width: 100%!important; border: 0px;">
+          <h2 class="font-weight-lighter">{{util.msj}}</h2>
+        </td>
+      </tr>
+    </tbody>
+    <tbody *ngIf="permisoService.Permisos.length > 0">
+    <tr *ngFor="let permiso of permisoService.Permisos; let i = index" >
+      <td class="Celdas-Tabla font-weight-bold ">{{(i+1)}}</td>
+      <td class="Celdas-Tabla ">{{permiso.permiso}}</td>
+      <td class="Celdas-Tabla ">{{permiso.descripcion}}</td>
+      <td class="Celdas-Tabla "></td>
+      <td class="Celdas-Tabla ">
+        <button type="submit" class="btn btn-primary btn-update" (click)="actionPermiso(util.ACTUALIZAR, permiso, i)">
+            <span>
+              <fa-icon [icon]="util.faPen"></fa-icon>
+            </span>
+        </button>
+        <button type="submit" class="btn btn-danger btn-delete" (click)="actionPermiso(util.ELIMINAR, permiso, i)">
+            <span>
+              <fa-icon [icon]="util.faTrash"></fa-icon>
+            </span>
+        </button>
+      </td>
+    </tr>
+    <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
+    </tbody>
+  </table>
+</div>
+
+<button class="btn btn-outline-success rounded-circle addButton" (click)="actionPermiso(util.AGREGAR)">
   <span>
     <fa-icon [icon]="util.faPlus" ></fa-icon>
   </span>
