--- a/src/app/Paginas/Body/home/home.component.css
+++ b/src/app/Paginas/Body/home/home.component.css
@@ -8,14 +8,17 @@
   }
   button, input{
     height: 100%!important;
-    font-size: 28px !important;
+    font-size: 25px !important;
   }
   span{
-    font-size: 28px !important;
+    font-size: 25px !important;
 
   }
   .form-container {
-    height: 125px;
+    height: 120px;
+  }
+  .searchBar {
+    padding-top: 130px !important;
   }
 }
 @media screen and (max-width: 1366px) and (max-height: 768px) {
@@ -32,6 +35,9 @@
   .form-container {
     height: 85px;
   }
+  .searchBar {
+    padding-top: 125px !important;
+  }
 }
 
 
@@ -41,7 +47,6 @@
   width: 100%;
   height: 100%;
 
-  padding-top: 125px;
   padding-right: 100px;
   padding-left:   100px;
   position: fixed;
