--- a/src/app/Paginas/Body/usuarios/permisos/permisos.component.html
+++ b/src/app/Paginas/Body/usuarios/permisos/permisos.component.html
@@ -7,6 +7,45 @@
   <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
 
+<div class="modal fade" id="modalUsuarios_Permiso" tabindex="-1" role="dialog" aria-labelledby="modalUsuarios_PermisoTitle" aria-hidden="true" >
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title centerTitleModal" id="modalUsuarios_PermisoTitle">Usuarios Permiso: {{PermisoSelected.permiso}}</h5>
+        <button type="button" class="close" data-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+        <div class="modal-body">
+
+          <div class="container">
+            <table class="table table-hover table-fixed">
+              <thead class="thead-dark">
+              <tr class="text-center">
+                <th class="v-a-middle font-weight-500 width-lg-up">Email</th>
+                <th class="v-a-middle font-weight-500 width-sm-up">Tipo</th>
+                <th class="v-a-middle font-weight-500 width-sm-up">Cargo</th>
+              </tr>
+              </thead>
+              <tbody>
+              <ng-container *ngFor="let user of PermisoSelected.usuarios; let i = index">
+                <tr class="text-center">
+                  <td class="v-a-middle width-lg-up">{{user.email}}</td>
+                  <td class="v-a-middle width-sm-up">{{user.tipo}}</td>
+                  <td class="v-a-middle width-sm-up">{{user.cargo}}</td>
+                </tr>
+              </ng-container>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
+        </div>
+    </div>
+  </div>
+</div>
+
 <div class="modal fade" id="modalPermiso" tabindex="-1" role="dialog" aria-labelledby="modalPermisoTitle" aria-hidden="true" data-keyboard="false" data-backdrop="static" *ngIf="Permiso != null">
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
@@ -115,14 +154,20 @@
       <td class="Celdas-Tabla font-weight-bold ">{{(i+1)}}</td>
       <td class="Celdas-Tabla ">{{permiso.permiso}}</td>
       <td class="Celdas-Tabla ">{{permiso.descripcion}}</td>
-      <td class="Celdas-Tabla "></td>
       <td class="Celdas-Tabla ">
-        <button type="submit" class="btn btn-primary btn-update" (click)="actionPermiso(util.ACTUALIZAR, permiso, i)">
+        <button type="button" class="btn btn-outline-info btn-show border-0" data-toggle="modal" data-target="#modalUsuarios_Permiso" (click)="PermisoSelected = permiso">
+            <span>
+              <fa-icon [icon]="util.faEye"></fa-icon>
+            </span>
+        </button>
+      </td>
+      <td class="Celdas-Tabla ">
+        <button type="button" class="btn btn-primary btn-update" (click)="actionPermiso(util.ACTUALIZAR, permiso, i)">
             <span>
               <fa-icon [icon]="util.faPen"></fa-icon>
             </span>
         </button>
-        <button type="submit" class="btn btn-danger btn-delete" (click)="actionPermiso(util.ELIMINAR, permiso, i)">
+        <button type="button" class="btn btn-danger btn-delete" (click)="actionPermiso(util.ELIMINAR, permiso, i)">
             <span>
               <fa-icon [icon]="util.faTrash"></fa-icon>
             </span>
@@ -134,7 +179,7 @@
   </table>
 </div>
 
-<button class="btn btn-outline-success rounded-circle addButton" (click)="actionPermiso(util.AGREGAR)">
+<button type="button" class="btn btn-outline-success rounded-circle addButton" (click)="actionPermiso(util.AGREGAR)">
   <span>
     <fa-icon [icon]="util.faPlus" ></fa-icon>
   </span>
