Avance Correcion Tabla prmisos en la vista usuarios

--- a/src/app/Paginas/Body/usuarios/usuarios.component.html
+++ b/src/app/Paginas/Body/usuarios/usuarios.component.html
@@ -71,7 +71,7 @@
               <div class="card rounded card-Permisos">
                 <div class="card-header card-header-Permisos border-top-0 border-left-0 border-right-0 border-bottom">
                   <div >
-                    <label class="font-weight-normal">Usuarios</label>
+                    <label class="font-weight-normal">Permisos</label>
                     <button type= "button" class="btn btn-outline-info rounded-circle btn-sm" (click)="isExpandedPermisoCard = !isExpandedPermisoCard; verifyExpandCardUser()">
                       <span>
                         <fa-icon [icon]="util.faChevronDown" *ngIf="!isExpandedPermisoCard"></fa-icon>
