--- a/src/app/Paginas/Body/usuarios/usuarios.component.css
+++ b/src/app/Paginas/Body/usuarios/usuarios.component.css
@@ -9,7 +9,7 @@
   margin-bottom: 50px;
   /*border: 1px solid rgba(108,117,125,0.24);*/
   height: 500px;
-  padding: 0px 100px;
+  /*padding: 0px 100px;*/
 }
 .container-users {
   padding: 100px 150px;
@@ -134,6 +134,9 @@
   .table-fixed tbody{
     height: 245px!important;
   }
+  .col-user {
+     padding: 0px 100px;
+  }
 }
 @media screen and (max-width: 1366px) and (max-height: 768px) {
   .table-fixed {
@@ -141,6 +144,9 @@
   }
   .table-fixed tbody{
     height: 165px!important;
+  }
+  .col-user {
+    padding: 0px 15px;
   }
 }
 
